--- a/FUTABus/SeatPicking.xaml
+++ b/FUTABus/SeatPicking.xaml
@@ -33,7 +33,7 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-            <uc:UCControlBar></uc:UCControlBar>
+            <uc:UCControlBar Tag="{Binding Title, ElementName=seatPick}"></uc:UCControlBar>
         </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -42,7 +42,8 @@
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0">
                 <materialDesign:Card>
-                    <Button Content="Tiếp tục"></Button>
+                    <Button Content="Tiếp tục"
+                            Click="BtnChonGhe"></Button>
                 </materialDesign:Card>
             </Grid>
             <Grid Grid.Column="1">
