--- a/FUTABus/PaymentWindow.xaml
+++ b/FUTABus/PaymentWindow.xaml
@@ -18,36 +18,39 @@
         ResizeMode="NoResize"
         WindowStyle="None"
         Name="payment"
-        Title="Thanh toán" Height="450" Width="1000">
+        Title="Thanh toán" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <uc:UCControlBar Tag="{Binding Title, ElementName=payment}"></uc:UCControlBar>
         </Grid>
         <Grid Grid.Row="1">
-            <TextBox HorizontalAlignment="Center" VerticalAlignment="Top">CHỌN PHƯƠNG THỨC THANH TOÁN</TextBox>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0" >
+                <StackPanel>
+                    <TextBox HorizontalAlignment="Center" VerticalAlignment="Top">CHỌN PHƯƠNG THỨC THANH TOÁN</TextBox>
             <!-- the following based on https://material.io/guidelines/components/buttons.html#buttons-toggle-buttons -->
-            <ListBox
-                    Style="{StaticResource MaterialDesignToolToggleListBox}"
-                    VerticalAlignment="Center"
-                    SelectedIndex="0">
-                <ListBoxItem Width="150" Height="150">
-                    <materialDesign:PackIcon Kind="Cash" Height="100" Width="100"/>
-                </ListBoxItem>
-                <ListBoxItem Width="150" Height="150">
-                    <materialDesign:PackIcon Kind="CreditCard" Height="100" Width="100"/>
-                </ListBoxItem>
+
+                    <RadioButton Style="{StaticResource MaterialDesignRadioButton}">
+                        Thanh toán bằng chuyển khoản
+                    </RadioButton>
+                
+                <RadioButton Style="{StaticResource MaterialDesignRadioButton}">
+                    Thanh toán khi nhận vé
+                </RadioButton>
+                </StackPanel>
                 <Button Content="Thanh toán" Name="btnThanhToan"
-                        Click="BtnThanhToan"></Button>
-            </ListBox>
-        </Grid>
-        <Grid Grid.Row="2">
-            <ListView ItemsSource="{Binding Items1}">
-                <ListView.View>
+                        Click="BtnThanhToan" Width="120" Background="#FF1553D6"></Button>
+            </Grid>
+            <!--<ListView ItemsSource="{Binding Items1}">
+                -->
+            <!--<ListView.View>
                     <GridView>
                         <GridViewColumn DisplayMemberBinding="{Binding Code}" Header="Mã vé" />
                         <GridViewColumn DisplayMemberBinding="{Binding Name}" Header="Họ tên" />
@@ -63,8 +66,58 @@
                         <GridViewColumn DisplayMemberBinding="{Binding Description}" Header="Giá vé" />
                         <GridViewColumn DisplayMemberBinding="{Binding TongTien}" Header="Tổng tiền"/>
                     </GridView>
-                </ListView.View>
-            </ListView>
+                </ListView.View>-->
+            <!--
+            </ListView>-->
+
+            <Grid Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" FontWeight="Bold">Mã vé</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" FontWeight="Bold">Họ tên</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" FontWeight="Bold">Email</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" FontWeight="Bold">SĐT</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" FontWeight="Bold">CMND</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="5" VerticalAlignment="Center" FontWeight="Bold">Địa chỉ</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="6" VerticalAlignment="Center" FontWeight="Bold">Tuyến đường</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="7" VerticalAlignment="Center" FontWeight="Bold">Ngày đi</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="8" VerticalAlignment="Center" FontWeight="Bold">Giờ khỏi hành</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="9" VerticalAlignment="Center" FontWeight="Bold">Số ghế</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="10" VerticalAlignment="Center" FontWeight="Bold">Điểm lên xe</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="11" VerticalAlignment="Center" FontWeight="Bold">Gía vé</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="12" VerticalAlignment="Center" FontWeight="Bold">Tổng tiền</TextBlock>
+
+                <TextBlock Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" Text="{Binding Mave}"></TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Text="{Binding Mave}"></TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Text="{Binding Mave}"></TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="3" VerticalAlignment="Center" Text="{Binding Mave}"></TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="4" VerticalAlignment="Center" Text="{Binding Mave}"></TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="5" VerticalAlignment="Center" Text="{Binding Mave}"></TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="6" VerticalAlignment="Center" Text="{Binding Mave}"></TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="7" VerticalAlignment="Center" Text="{Binding Mave}"></TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="8" VerticalAlignment="Center" Text="{Binding Mave}"></TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="9" VerticalAlignment="Center" Text="{Binding Mave}"></TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="10" VerticalAlignment="Center" Text="{Binding Mave}"></TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="11" VerticalAlignment="Center" Text="{Binding Mave}"></TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="12" VerticalAlignment="Center" Text="{Binding Mave}"></TextBlock>
+            </Grid>
         </Grid>
     </Grid>
 </Window>
